--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,6 @@ html,
 body,
 :root {
 	height: 100%;
-	background-color: #aa9a75;
-	color: #31271c;
+	background-color: #29302d;
+	color: #241c16;
 }
